kubernetes/apps/firefox/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: firefox
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
